src/test/resources/private/typechecking/pass/constructor/pass01.jova
class Helper0 {
}

class Helper1 {
    Helper1(int a){
    }
}

class Test {
    public int func() {
        Helper0 a;
        Helper1 b;
        Helper1 c;

        int v;
        string w;
        bool x;
        Helper0 y;
        Helper1 z;

        a = new Helper0;

        b = new Helper1;
        b = new Helper1(v);


        return 0;
    }
}