src/test/resources/private/typechecking/fail/operators/op_fail08.jova
class Cls{
	
	private int func(){
		
		int a;
		bool b;
		b = false;
		a = b ? b : "string";
		return a;
		
	}

}